tests/lustre/typechecking/shouldFail/cast_04.lus

type my_record = struct {x: int; y: int};

node top(x: my_record) returns (y: int);
let
  y = (int x);
tel
